Fix line wraps in MD. Maybe flex box as some point, but good enough for now.

--- a/app/assets/stylesheets/locals/collections-exhibits.css.scss
+++ b/app/assets/stylesheets/locals/collections-exhibits.css.scss
@@ -20,9 +20,13 @@
 
 .blacklight-exhibits-index {
     #main-container {
+        .wrap { height: 215px; }
         .info {
-            h2 { font-size: 18px; } // Smaller font
-            height: 120px; // Needs more space
+            font-size: 24px;
+            h2 { 
+                font-weight: bold; // Smaller font
+                font-size: 24px;
+            }
         }
     }
 }
